# flaskBokeh-scratch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test.py  wsgi.py
app/: __init__.py  data_loader.py  plots.py
scripts/: docker_deploy.bat
tests/: test_bokeh_html_output.py
